--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,4 +27,5 @@ build_script:
 after_build:
   - ps: gci "$baseDir\Provider\out" | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
 test_script:
+  - ps: $env:tests_firebird_dir = 'C:\firebird'
   - ps: "& $baseDir\\Provider\\tests.ps1 -Configuration $env:CONFIGURATION"
